--- a/libmagtisun/Makefile
+++ b/libmagtisun/Makefile
@@ -2,11 +2,16 @@ LIB = -lcurl
 CFLAGS = -g -O2 -Wall -fPIC
 OBJS = libmagtisun.o
 
-all: $(OBJS)
-	$(CC) -shared -o libmagtisun.so $(LIB) $(OBJS)
+.c.o:
+	$(CC) $(CFLAGS) -c $< $(LIB)
+
+libmagtisun.a: $(OBJS)
+	$(AR) rcs libmagtisun.a $(OBJS)
+	@echo [-] Syncing static library
+	sync
 
 libmagtisun.o: libmagtisun.h
 
 .PHONY: clean
 clean:
-	$(RM) libmagtisun.so $(OBJS)
+	$(RM) libmagtisun.a $(OBJS)
