--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,12 +1,12 @@
 LIB = -lcurl
-CFLAGS = -g -O2 -Wall -fPIC
+CFLAGS = -g -O2 -Wall
 OBJS = magtisun.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $< $(LIB)
 
-magtisun.a: $(OBJS)
-	$(AR) rcs magtisun.a $(OBJS)
+libmagtisun.a: $(OBJS)
+	$(AR) rcs libmagtisun.a $(OBJS)
 	@echo [-] Syncing static library
 	sync
 
@@ -14,4 +14,4 @@ magtisun.o: magtisun.h
 
 .PHONY: clean
 clean:
-	$(RM) magtisun.a $(OBJS)
+	$(RM) libmagtisun.a $(OBJS)
