--- a/slog/Makefile
+++ b/slog/Makefile
@@ -1,16 +1,26 @@
-CFLAGS = -g -O2 -Wall -fPIC
+CFLAGS = -g -O2 -Wall
 OBJS = slog.o
 
-.c.o:
-	$(CC) $(CFLAGS) -c $<
+LIBINSTALL = /usr/local/lib
+HEADINSTALL = /usr/local/include
 
-slog.a: $(OBJS)
-	$(AR) rcs slog.a $(OBJS)
+.c.o:
+	$(CC) $(CFLAGS) -c $< $(LIB)
+
+libslog.a: $(OBJS)
+	$(AR) rcs libslog.a $(OBJS)
 	@echo [-] Syncing static library
 	sync
+
+install:
+	@test -d $(LIBINSTALL) || mkdir $(LIBINSTALL)
+	@test -d $(HEADINSTALL) || mkdir $(HEADINSTALL)
+	@install -m 0664 libslog.a $(LIBINSTALL)/
+	@install -m 0664 slog.h $(HEADINSTALL)/
+	@echo [-] Done
 
 slog.o: slog.h
 
 .PHONY: clean
 clean:
-	$(RM) slog.a $(OBJS)
+	$(RM) libslog.a $(OBJS)
