--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,14 @@
-CFLAGS = -g -O2 -Wall -I../magtisun -I../slog
-LIB = -lcurl ../magtisun/magtisun.a ../slog/slog.a
+CFLAGS = -g -O2 -Wall -I../lib -I../slog -Wno-unused-result
+LIB = ../lib/libmagtisun.a ../slog/libslog.a -lcurl 
 PREFIX = /usr/local
 BINDIR = ../bin
 
-OBJS = magtisun.o info.o
+OBJ = magtisun.o info.o
 
-all: $(OBJS)
-	$(CC) $(CFLAGS) -o magtisun $(OBJS) $(LIB)
+all: $(OBJ)
+	$(CC) $(CFLAGS) -o magtisun $(OBJ) $(LIB)
 	@test -d $(BINDIR) || mkdir $(BINDIR)
 	@install -m 0755 magtisun $(BINDIR)/
-	@install -m 0664 config.cfg $(BINDIR)
 	@echo [-] Executable files builded in - $(BINDIR) folder
 
 magtisun.o: info.h stdinc.h
@@ -17,8 +16,8 @@ info.o: info.h stdinc.h
 
 .PHONY: install
 install: magtisun
-	install -m 0755 magtisun $(PREFIX)/bin
+	@install -m 0755 magtisun $(PREFIX)/bin
 
 .PHONY: clean
 clean:
-	$(RM) magtisun $(OBJS)
+	$(RM) magtisun $(OBJ)
